@@ -7,6 +7,7 @@ v2.1.8
 -------------------
 * improvements to the imdb::soundtrack() method. Much better results now :)
 + imdb_person::filmograf() now fills the "addons" information again (for all movie_*() methods)
+! imdb_person: articles(), interviews() returned garbage if that information was not available
 
 v2.1.7 (15.05.2013)
 -------------------
